[package]
name = "micro_os"
version = "0.1.0"
authors = ["leokang28 <leokang2828@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort" # 禁用panic发生时展开栈

[profile.release]
panic = "abort"
